added in generated example files

--- a/src/test/resources/panl.properties
+++ b/src/test/resources/panl.properties
@@ -15,7 +15,7 @@
 #
 # A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
 # a b c d e f g h i j k l m n o p q r s t u v w x y z
-# 0 1 2 3 4 5 6 7 8 9 - _ . ~
+# 0 1 2 3 4 5 6 7 8 9
 #
 # The following are reserved characters and should not be used as they may be
 # HTTP encoded - note that the plus ('+') character is still used without
@@ -65,5 +65,4 @@ solr.rows=10
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.collection.mechanical-pencils=mechanical-pencils.properties
-
+panl.collection.example=example.panl.properties
