panl generations and server

--- a/panl.properties
+++ b/panl.properties
@@ -81,5 +81,6 @@ panl.results.viewer.url=/panl-results-viewer/
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-$panl.collection
+panl.collection.example=example.panl.properties
+
 
