--- a/techproducts.panl.properties
+++ b/techproducts.panl.properties
@@ -19,7 +19,7 @@
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-$panl.lpse.num
+panl.lpse.num=1
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -29,10 +29,10 @@ $panl.lpse.num
 # query parameter will be and may not be the same as any of the facets
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-$panl.param.query
-$panl.param.sort
-$panl.param.page
-$panl.param.numrows
+panl.param.query=q
+panl.param.sort=s
+panl.param.page=p
+panl.param.numrows=n
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -40,6 +40,8 @@ $panl.param.numrows
 # to something a little nicer if desired
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+solr.numRows=n
+solr.startAt=s
 
 solr.modifier.AND=+
 solr.modifier.OR=-
@@ -64,32 +66,66 @@ solr.sort.DESC=D
 #              name in the configuration file
 # <field_name> is the name of the facet in a more human friendly version
 #
-# A comment is included before each of the lpse fields with the XML that from
-# the schema that it was generated.
-#
-# ONLY fields that are INDEXED and STORED are included in the lpse fields as
-# they are the only ones that will have faceting enabled on them.
-#
-# Any additional fields that you wish to return with the information,
-# additional to the faceted fields are in the
-#   panl.field.<solr_field>
-# properties
-#
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-$panl.lpse.fields
+panl.lpse.fields=panl.field.r=_root_
+panl.name.r=Root
+panl.field.i=id
+panl.name.i=Id
+panl.field.P=pre
+panl.name.P=Pre
+panl.field.S=sku
+panl.name.S=Sku
+panl.field.N=name
+panl.name.N=Name
+panl.field.m=manu
+panl.name.m=Manu
+panl.field.c=cat
+panl.name.c=Cat
+panl.field.f=features
+panl.name.f=Features
+panl.field.I=includes
+panl.name.I=Includes
+panl.field.w=weight
+panl.name.w=Weight
+panl.field.t=title
+panl.name.t=Title
+panl.field.d=description
+panl.name.d=Description
+panl.field.C=comments
+panl.name.C=Comments
+panl.field.a=author
+panl.name.a=Author
+panl.field.k=keywords
+panl.name.k=Keywords
+panl.field.R=resourcename
+panl.name.R=Resourcename
+panl.field.u=url
+panl.name.u=Url
+panl.field.l=last_modified
+panl.name.l=Last Modified
+panl.field.L=links
+panl.name.L=Links
+panl.field.T=text
+panl.name.T=Text
+panl.field.8=price
+panl.name.8=Price
+panl.field.j=popularity
+panl.name.j=Popularity
+panl.field.o=inStock
+panl.name.o=InStock
+panl.field.X=store
+panl.name.X=Store
+panl.field.A=subject
+panl.name.A=Subject
+panl.field.H=category
+panl.name.H=Category
+panl.field.Q=content_type
+panl.name.Q=Content Type
+panl.field.0=text_rev
+panl.name.0=Text Rev
+panl.field.E=payloads
+panl.name.E=Payloads
 
-$panl.lpse.order
 
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#
-#                             Panl Field Configuration
-#                             ---- ----- -------------
-#
-# Below are the fields that are configured to be returned for the query, these
-# fields are added to the query and must match the solr fields
-#
-#
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-
-$panl.results.fields.all
+panl.lpse.order=r,i,P,S,N,m,c,f,I,w,t,d,C,a,k,R,u,l,L,T,8,j,o,X,A,H,Q,0,E,p,n,s,q
