Updates to the PanlClient

--- a/example.panl.properties
+++ b/example.panl.properties
@@ -4,7 +4,7 @@
 #              ---- ---- ------- -------- ------ -------------
 #
 # The following configuration values determine how the LPSE is configured.  The
-# LPSE is made up of the following types
+# LPSE is made up of the following types:
 #     - query term parameter - the actual query entered by the user of the site
 #     - facet parameters - used to refine/narrow the search query term
 #     - SOLR configuration - used to change how the results are displayed - e.g.
@@ -12,10 +12,12 @@
 #     - facet modifiers - used to modify the way in which facets are utilised
 #
 # First up, the number of characters that are used for encoding of a particular
-# parameter must be set.  This number must then also match all of the
-# solr.field.* definitions, else a FATAL encoding error will occur and the
-# server will not be started.  This defaults to a single character if not set -
-# i.e. 'panl.lpse.num=1'
+# parameter must be set.  This number must then also match all the
+#   solr.field.*
+#
+# definitions, else a FATAL encoding error will occur and the server will not
+# be started.  This defaults to a single character if not set - i.e.
+#   panl.lpse.num=1
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
@@ -26,9 +28,10 @@ panl.lpse.num=1
 # The following are considered metadata that changes what results are returned
 # and in what format.  These are not considered facets, however they do need to
 # be the same size as the panl.lpse.num property above.  These define what the
-# query parameter will be and may not be the same as any of the facets
+# query parameter will be and __MUST NOT__ be the same as any of the facets
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
 panl.param.query=q
 panl.param.sort=s
 panl.param.page=p
@@ -57,23 +60,35 @@ solr.sort.DESC=D
 # the panl facets that are in use by this indexer.  The format is:
 #   panl.facet.<code>=<solr_field>
 #   panl.name.<code>=<field_name>
+#
 # where:
 #       <code> is the LPSE code and __MUST__ be the same length as the
 #              panl.lpse.num
 # <solr_field> is the solr field name which __MUST__ map to the Solr field
 #              name in the configuration file
-# <field_name> is the name of the facet in a more human friendly version
+# <field_name> is the name of the facet in a more human friendly version, will
+#              be returned with the results, and may be used as the facet
+#              header
 #
-# A comment is included before each of the lpse fields with the XML that from
-# the schema that it was generated.
+#                                ~ ~ ~ * ~ ~ ~
 #
-# ONLY fields that are INDEXED and STORED are included in the lpse fields as
-# they are the only ones that will have faceting enabled on them.
+# NOTE: A comment is included before each of the lpse fields with the XML that
+#       from the schema that it was generated.
 #
-# Any additional fields that you wish to return with the information,
-# additional to the faceted fields are in the
-#   panl.field.<solr_field>
-# properties
+# NOTE: ONLY fields that are INDEXED and STORED are included in the lpse fields
+#       as they are the only ones that will have faceting enabled on them.
+#
+# NOTE: You do not need to define to facet on all the fields - any definitions
+#       of fields that you do not wish to facet on may be simply deleted from
+#       this file.
+#
+#                                ~ ~ ~ * ~ ~ ~
+#
+# You may return additional fields with a query that are either faceted or not
+# and is defined in the
+#   panl.results.fields.*
+#
+# properties towards the bottom of this file
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
@@ -151,50 +166,84 @@ panl.field.L=links
 panl.name.L=Links
 
 # <field "name"="price" "type"="pfloat" "indexed"="true" "stored"="true" />
-panl.field.Z=price
-panl.name.Z=Price
+panl.field.5=price
+panl.name.5=Price
 
 # <field "name"="popularity" "type"="pint" "indexed"="true" "stored"="true" />
-panl.field.0=popularity
-panl.name.0=Popularity
+panl.field.x=popularity
+panl.name.x=Popularity
 
 # <field "name"="inStock" "type"="boolean" "indexed"="true" "stored"="true" />
-panl.field.3=inStock
-panl.name.3=InStock
+panl.field.2=inStock
+panl.name.2=InStock
 
 # <field "name"="store" "type"="location" "indexed"="true" "stored"="true" />
-panl.field.Q=store
-panl.name.Q=Store
+panl.field.V=store
+panl.name.V=Store
 
 # <field "name"="subject" "type"="text_gen_sort" "indexed"="true" "stored"="true" "multiValued"="false" />
-panl.field.O=subject
-panl.name.O=Subject
+panl.field.v=subject
+panl.name.v=Subject
 
 # <field "name"="category" "type"="text_general" "indexed"="true" "stored"="true" />
-panl.field.H=category
-panl.name.H=Category
+panl.field.K=category
+panl.name.K=Category
 
 # <field "name"="content_type" "type"="string" "indexed"="true" "stored"="true" "multiValued"="true" />
-panl.field.U=content_type
-panl.name.U=Content Type
+panl.field.E=content_type
+panl.name.E=Content Type
 
 # <field "name"="payloads" "type"="payloads" "indexed"="true" "stored"="true" />
-panl.field.5=payloads
-panl.name.5=Payloads
+panl.field.3=payloads
+panl.name.3=Payloads
 
-
-panl.lpse.order=i,P,S,N,m,c,f,I,w,t,d,C,a,k,r,u,l,L,Z,0,3,Q,O,H,U,5,p,n,s,q
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
-#                             Panl Field Configuration
-#                             ---- ----- -------------
+#                        Panl LPSE Order Configuration
+#                        ---- ----- ----- -------------
+#
+# This is the order in which the URL will be generated, the default order
+# generated by panl generate is the order in which the fields were defined in
+# the solr managed-schema.xml file and will almost certainly not be the order
+# in which you would want to generate the URLs.
+#
+# NOTE: all defined panl facet fields must be represented here, and the
+# recommendation is to have the following properties:
+#
+#   panl.param.query
+#   panl.param.sort
+#   panl.param.page
+#   panl.param.numrows
+#
+# As the end of the URL
+#
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
+panl.lpse.order=i,P,S,N,m,c,f,I,w,t,d,C,a,k,r,u,l,L,5,x,2,V,v,K,E,3,p,n,s,q
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#
+#                       Panl Results Field Configuration
+#                       ---- ------- ----- -------------
 #
 # Below are the fields that are configured to be returned for the query, these
-# fields are added to the query and must match the solr fields
+# fields are added to the query and must match the solr fields.
 #
+# By default, the panl.results.fields.all always exists - even if it is not
+# included in these properties file - it is included here for reference for all
+# the fields that are stored by the solr engine.
+#
+# As an example, another property:
+#   panl.results.fields.first
+#
+# was also automatically generated with only the first five fields.  You may
+# rename, delete or add any of the results fields as you wish (remembering that
+# the default 'all' will __ALWAYS__ exists, even if it is not defined in this
+# file).
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 panl.results.fields.all=id,pre,sku,name,manu,cat,features,includes,weight,price,popularity,inStock,store,title,subject,description,comments,author,keywords,category,resourcename,url,content_type,last_modified,links,_src_,content,payloads
 
+panl.results.fields.firstfive=id,pre,sku,name,manu
