--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,10 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
     implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
-    compileOnly 'org.apache.solr:solr-solrj:9.6.0'
-    compileOnly 'org.apache.solr:solr-solrj-zookeeper:9.6.0'
+    implementation 'org.apache.solr:solr-solrj:9.6.0'
+    implementation 'org.apache.solr:solr-solrj-zookeeper:9.6.0'
+
+    implementation 'org.json:json:20240303'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
