--- a/src/main/resources/panl.template.properties
+++ b/src/main/resources/panl.template.properties
@@ -33,12 +33,17 @@
 #       care of by the panl request mechanism
 #   solr.search.indexer.url - the indexer server URL(s) to connect to
 #
+#                                ~ ~ ~ * ~ ~ ~
+#
 # NOTE: What the solr.search.server.url will be will depend on the client that
 #       you choose.  The SolrJ client __MUST__ be one of
+#
 #  - Http2SolrClient
 #  - HttpJdkSolrClient
 #  - LBHttp2SolrClient
 #  - CloudSolrClient
+#
+#                                ~ ~ ~ * ~ ~ ~
 #
 # By default - we will be using the CloudSolrClient as it works with the
 # example instructions for spinning up a test solr instance
@@ -50,8 +55,8 @@
 #solrj.client=LBHttp2SolrClient
 solrj.client=CloudSolrClient
 
-solr.search.server.url=http://localhost:8983/solr/,http://localhost:7574/solr/
-solr.indexer.server.url=http://localhost:8983/solr/
+solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
+solr.indexer.server.url=http://localhost:8983/solr
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -60,7 +65,6 @@ solr.indexer.server.url=http://localhost:8983/solr/
 #      would be pretty useless
 #  solr.facet.min.count - the minimum number of items within each facet before
 #      the facet will be returned
-#  solr.rows - the number of rows returned for the query
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 solr.facet.enabled=true
