--- a/example.panl.properties
+++ b/example.panl.properties
@@ -94,108 +94,108 @@ solr.sort.DESC=D
 
 
 # <field "name"="id" "type"="string" "indexed"="true" "stored"="true" "required"="true" "multiValued"="false" />
-panl.field.i=id
-panl.name.i=Id
+#panl.facet.i=id
+#panl.name.i=Id
 
 # <field "name"="pre" "type"="preanalyzed" "indexed"="true" "stored"="true" />
-panl.field.P=pre
-panl.name.P=Pre
+#panl.facet.P=pre
+#panl.name.P=Pre
 
 # <field "name"="sku" "type"="text_en_splitting_tight" "indexed"="true" "stored"="true" "omitNorms"="true" />
-panl.field.S=sku
-panl.name.S=Sku
+#panl.facet.S=sku
+#panl.name.S=Sku
 
 # <field "name"="name" "type"="text_general" "indexed"="true" "stored"="true" />
-panl.field.N=name
-panl.name.N=Name
+#panl.facet.N=name
+#panl.name.N=Name
 
 # <field "name"="manu" "type"="text_gen_sort" "indexed"="true" "stored"="true" "omitNorms"="true" "multiValued"="false" "docValues"="true" "useDocValuesAsStored"="true" />
-panl.field.m=manu
+panl.facet.m=manu
 panl.name.m=Manu
 
 # <field "name"="cat" "type"="string" "indexed"="true" "stored"="true" "multiValued"="true" />
-panl.field.c=cat
+panl.facet.c=cat
 panl.name.c=Cat
 
 # <field "name"="features" "type"="text_general" "indexed"="true" "stored"="true" "multiValued"="true" />
-panl.field.f=features
-panl.name.f=Features
+#panl.facet.f=features
+#panl.name.f=Features
 
 # <field "name"="includes" "type"="text_general" "indexed"="true" "stored"="true" "termVectors"="true" "termPositions"="true" "termOffsets"="true" />
-panl.field.I=includes
-panl.name.I=Includes
+#anl.facet.I=includes
+#panl.name.I=Includes
 
 # <field "name"="weight" "type"="pfloat" "indexed"="true" "stored"="true" />
-panl.field.w=weight
+panl.facet.w=weight
 panl.name.w=Weight
 
 # <field "name"="title" "type"="text_gen_sort" "indexed"="true" "stored"="true" "multiValued"="true" />
-panl.field.t=title
+panl.facet.t=title
 panl.name.t=Title
 
 # <field "name"="description" "type"="text_general" "indexed"="true" "stored"="true" />
-panl.field.d=description
-panl.name.d=Description
+#panl.facet.d=description
+#panl.name.d=Description
 
 # <field "name"="comments" "type"="text_general" "indexed"="true" "stored"="true" />
-panl.field.C=comments
-panl.name.C=Comments
+#panl.facet.C=comments
+#panl.name.C=Comments
 
 # <field "name"="author" "type"="text_gen_sort" "indexed"="true" "stored"="true" "multiValued"="false" />
-panl.field.a=author
+panl.facet.a=author
 panl.name.a=Author
 
 # <field "name"="keywords" "type"="text_general" "indexed"="true" "stored"="true" />
-panl.field.k=keywords
+panl.facet.k=keywords
 panl.name.k=Keywords
 
 # <field "name"="resourcename" "type"="text_general" "indexed"="true" "stored"="true" />
-panl.field.r=resourcename
+panl.facet.r=resourcename
 panl.name.r=Resourcename
 
 # <field "name"="url" "type"="text_general" "indexed"="true" "stored"="true" />
-panl.field.u=url
+panl.facet.u=url
 panl.name.u=Url
 
 # <field "name"="last_modified" "type"="pdate" "indexed"="true" "stored"="true" />
-panl.field.l=last_modified
+panl.facet.l=last_modified
 panl.name.l=Last Modified
 
 # <field "name"="links" "type"="string" "indexed"="true" "stored"="true" "multiValued"="true" />
-panl.field.L=links
+panl.facet.L=links
 panl.name.L=Links
 
 # <field "name"="price" "type"="pfloat" "indexed"="true" "stored"="true" />
-panl.field.5=price
-panl.name.5=Price
+panl.facet.U=price
+panl.name.U=Price
 
 # <field "name"="popularity" "type"="pint" "indexed"="true" "stored"="true" />
-panl.field.x=popularity
+panl.facet.x=popularity
 panl.name.x=Popularity
 
 # <field "name"="inStock" "type"="boolean" "indexed"="true" "stored"="true" />
-panl.field.2=inStock
-panl.name.2=InStock
+panl.facet.K=inStock
+panl.name.K=InStock
 
 # <field "name"="store" "type"="location" "indexed"="true" "stored"="true" />
-panl.field.V=store
-panl.name.V=Store
+panl.facet.e=store
+panl.name.e=Store
 
 # <field "name"="subject" "type"="text_gen_sort" "indexed"="true" "stored"="true" "multiValued"="false" />
-panl.field.v=subject
-panl.name.v=Subject
+panl.facet.X=subject
+panl.name.X=Subject
 
 # <field "name"="category" "type"="text_general" "indexed"="true" "stored"="true" />
-panl.field.K=category
-panl.name.K=Category
+panl.facet.D=category
+panl.name.D=Category
 
 # <field "name"="content_type" "type"="string" "indexed"="true" "stored"="true" "multiValued"="true" />
-panl.field.E=content_type
-panl.name.E=Content Type
+#panl.facet.H=content_type
+#panl.name.H=Content Type
 
 # <field "name"="payloads" "type"="payloads" "indexed"="true" "stored"="true" />
-panl.field.3=payloads
-panl.name.3=Payloads
+#panl.facet.z=payloads
+#panl.name.z=Payloads
 
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -220,7 +220,7 @@ panl.name.3=Payloads
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.lpse.order=i,P,S,N,m,c,f,I,w,t,d,C,a,k,r,u,l,L,5,x,2,V,v,K,E,3,p,n,s,q
+panl.lpse.order=m,c,w,t,a,k,r,u,l,L,U,x,K,e,X,D,p,n,s,q
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -246,4 +246,4 @@ panl.lpse.order=i,P,S,N,m,c,f,I,w,t,d,C,a,k,r,u,l,L,5,x,2,V,v,K,E,3,p,n,s,q
 
 panl.results.fields.all=id,pre,sku,name,manu,cat,features,includes,weight,price,popularity,inStock,store,title,subject,description,comments,author,keywords,category,resourcename,url,content_type,last_modified,links,_src_,content,payloads
 
-panl.results.fields.firstfive=id,pre,sku,name,manu
+panl.results.fields.firstfive=cat,title,author,name,manu
