--- a/src/test/resources/mechanical-pencils.properties
+++ b/src/test/resources/mechanical-pencils.properties
@@ -68,7 +68,7 @@ solr.sort.DESC=D
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.facet.c=collection
+panl.facet.c=collectionRequestHandler
 panl.name.c=Collection
 
 panl.facet.b=brand
@@ -137,13 +137,13 @@ panl.name.7=Sharpener
 #
 panl.lpse.order=c,b,m,C,v,e,n,b,g,r,c,a,l,r,d,w,i,d,m,o,k,0,1,2,3,4,5,6,7
 
-solr.query.default=collection:mechanical-pencils
+solr.query.default=collectionRequestHandler:mechanical-pencils
 
 #
 # define all of the collections that are available to the SOLR instance and
 # what documents and fields are applicable to this.  Note that the document
 # extensions are all case insensitive - i.e. (JPEG == jpeg) != jpg
 #
-# By default, all documents are automatically added to the 'all' collection
+# By default, all documents are automatically added to the 'all' collectionRequestHandler
 # which is not defined here - and will be ignored if re-defined.
 #
