--- a/src/test/resources/panl.properties
+++ b/src/test/resources/panl.properties
@@ -57,7 +57,7 @@ solr.rows=10
 #                           Property File Inclusion
 #                           -------- ---- ---------
 #
-# Each property file defines a singular collection, with the associated
+# Each property file defines a singular collectionRequestHandler, with the associated
 # metadata.
 # not strictly necessary, including different files for each of the
 # collections that are available for this solr instance should make it less of
@@ -65,4 +65,4 @@ solr.rows=10
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.collection.example=example.panl.properties
+panl.collectionRequestHandler.example=example.panl.properties
