start of url parsing

--- a/example.panl.properties
+++ b/example.panl.properties
@@ -54,6 +54,20 @@ solr.sort.DESC=D
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
+# SOLR configuration variables
+#  solr.facet.enabled - whether to turn on faceting - without faceting, this
+#      would be pretty useless
+#  solr.facet.min.count - the minimum number of items within each facet before
+#      the facet will be returned
+#
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
+solr.facet.enabled=true
+solr.facet.min.count=1
+solr.numrows=10
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#
 #                             Panl Facet Configuration
 #                             ---- ----- -------------
 #
