--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -32,6 +32,7 @@ $panl.lpse.num
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
+
 $panl.param.query
 $panl.param.sort
 $panl.param.page
@@ -51,6 +52,20 @@ solr.default.modifier=+
 
 solr.sort.ASC=U
 solr.sort.DESC=D
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#
+# SOLR configuration variables
+#  solr.facet.enabled - whether to turn on faceting - without faceting, this
+#      would be pretty useless
+#  solr.facet.min.count - the minimum number of items within each facet before
+#      the facet will be returned
+#
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
+solr.facet.enabled=true
+solr.facet.min.count=1
+solr.numrows=10
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
