start of lpse parsing

--- a/src/main/resources/panl.template.properties
+++ b/src/main/resources/panl.template.properties
@@ -58,7 +58,20 @@ solrj.client=CloudSolrClient
 solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
 solr.indexer.server.url=http://localhost:8983/solr
 
-panl.results.viewer.url=/panl-results-viewer/
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#
+# The panl results viewer url, this is a simple web app which will allow you to
+# test the collections, and the URLs that are generated, including field
+# inclusion, faceting, querying, and results.
+#
+# If this property does not exist, then no results viewer will be available.
+# You may wish to remove this property for production (or perhaps just disallow
+# access to it.)
+#
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
+panl.results.viewer.url=/panl-results-viewer/*
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -73,5 +86,5 @@ panl.results.viewer.url=/panl-results-viewer/
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-$panl.collection
+$panl.collections
 
