start of lpse encoding

--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -45,6 +45,7 @@ $panl.param.numrows
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
+# probs don't need this....
 solr.modifier.AND=+
 solr.modifier.OR=-
 
