Faceting and building of URIs

--- a/example.panl.properties
+++ b/example.panl.properties
@@ -125,11 +125,11 @@ solr.numrows=10
 
 # <field "name"="manu" "type"="text_gen_sort" "indexed"="true" "stored"="true" "omitNorms"="true" "multiValued"="false" "docValues"="true" "useDocValuesAsStored"="true" />
 panl.facet.m=manu
-panl.name.m=Manu
+panl.name.m=Manufacturer
 
 # <field "name"="cat" "type"="string" "indexed"="true" "stored"="true" "multiValued"="true" />
 panl.facet.c=cat
-panl.name.c=Cat
+panl.name.c=Catalogue
 
 # <field "name"="features" "type"="text_general" "indexed"="true" "stored"="true" "multiValued"="true" />
 #panl.facet.f=features
@@ -165,11 +165,11 @@ panl.name.k=Keywords
 
 # <field "name"="resourcename" "type"="text_general" "indexed"="true" "stored"="true" />
 panl.facet.r=resourcename
-panl.name.r=Resourcename
+panl.name.r=Resource name
 
 # <field "name"="url" "type"="text_general" "indexed"="true" "stored"="true" />
 panl.facet.u=url
-panl.name.u=Url
+panl.name.u=URL
 
 # <field "name"="last_modified" "type"="pdate" "indexed"="true" "stored"="true" />
 panl.facet.l=last_modified
@@ -189,7 +189,7 @@ panl.name.x=Popularity
 
 # <field "name"="inStock" "type"="boolean" "indexed"="true" "stored"="true" />
 panl.facet.K=inStock
-panl.name.K=InStock
+panl.name.K=In Stock
 
 # <field "name"="store" "type"="location" "indexed"="true" "stored"="true" />
 panl.facet.e=store
