Start of the panl result viewer

--- a/example.panl.properties
+++ b/example.panl.properties
@@ -37,6 +37,15 @@ panl.param.sort=s
 panl.param.page=p
 panl.param.numrows=n
 
+#                     Whether to include single facets
+#                     ------- -- ------- ------ ------
+# Facets that only include a single result to further refine the query will not
+# be included by default.  The reasoning behind this is that having only one
+# defined facet does not refine the query at all, it simply returns the same
+# set of results, just with a longer LPSE URI
+
+panl.include.single.facets=false
+
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
 # These are default values which need to be present, however they may be changed
@@ -55,14 +64,11 @@ solr.sort.DESC=D
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
 # SOLR configuration variables
-#  solr.facet.enabled - whether to turn on faceting - without faceting, this
-#      would be pretty useless
 #  solr.facet.min.count - the minimum number of items within each facet before
 #      the facet will be returned
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-solr.facet.enabled=true
 solr.facet.min.count=1
 solr.numrows=10
 
@@ -126,6 +132,8 @@ solr.numrows=10
 # <field "name"="manu" "type"="text_gen_sort" "indexed"="true" "stored"="true" "omitNorms"="true" "multiValued"="false" "docValues"="true" "useDocValuesAsStored"="true" />
 panl.facet.m=manu
 panl.name.m=Manufacturer
+panl.prefix.m=Manufactured by 
+panl.suffix.m=\ / a fine company
 
 # <field "name"="cat" "type"="string" "indexed"="true" "stored"="true" "multiValued"="true" />
 panl.facet.c=cat
@@ -249,7 +257,7 @@ panl.lpse.order=m,c,w,t,a,k,r,u,l,L,U,x,K,e,X,D,p,n,s,q
 # the fields that are stored by the solr engine.
 #
 # As an example, another property:
-#   panl.results.fields.first
+#   panl.results.fields.firstfive
 #
 # was also automatically generated with only the first five fields.  You may
 # rename, delete or add any of the results fields as you wish (remembering that
