--- a/panl.properties
+++ b/panl.properties
@@ -70,7 +70,7 @@ solr.indexer.server.url=http://localhost:8983/solr
 solr.facet.enabled=true
 solr.facet.min.count=1
 
-panl.results.viewer.url=/panl-results-viewer/
+panl.results.viewer.url=true
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
