--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -23,20 +23,26 @@
 
 $panl.lpse.num
 
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#
+#                                Panl Metadata
+#                                ---- --------
 # The following are considered metadata that changes what results are returned
 # and in what format.  These are not considered facets, however they do need to
 # be the same size as the panl.lpse.num property above.  These define what the
 # query parameter will be and __MUST NOT__ be the same as any of the facets
-#
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-
 
 $panl.param.query
 $panl.param.sort
 $panl.param.page
 $panl.param.numrows
+
+#                     Whether to include single facets
+#                     ------- -- ------- ------ ------
+# Facets that only include a single result to further refine the query will not
+# be included by default.  The reasoning behind this is that having only one
+# defined facet does not refine the query at all, it simply returns the same
+# set of results, just with a longer LPSE URI
+
+panl.include.single.facets=false
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -57,14 +63,13 @@ solr.sort.DESC=D
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
 # SOLR configuration variables
-#  solr.facet.enabled - whether to turn on faceting - without faceting, this
-#      would be pretty useless
 #  solr.facet.min.count - the minimum number of items within each facet before
 #      the facet will be returned
+#  solr.numrows - the default number of rows (i.e. documents to return for any
+#      query)
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-solr.facet.enabled=true
 solr.facet.min.count=1
 solr.numrows=10
 
@@ -73,7 +78,7 @@ solr.numrows=10
 #                             Panl Facet Configuration
 #                             ---- ----- -------------
 #
-# the panl facets that are in use by this indexer.  The format is:
+# The panl facets that are in use by this collection.  The format is:
 #   panl.facet.<code>=<solr_field>
 #   panl.name.<code>=<field_name>
 #
@@ -85,6 +90,37 @@ solr.numrows=10
 # <field_name> is the name of the facet in a more human friendly version, will
 #              be returned with the results, and may be used as the facet
 #              header
+#
+#                                ~ ~ ~ * ~ ~ ~
+#
+# Additionally (and optionally), you may define a prefix and/or a suffix for
+# any defined facet.  This will make the URL longer, but will also make it more
+# human understandable. Panl will automatically remove these before sending the
+# query to the Solr server
+#
+# The format is:
+#   panl.prefix.<code>=<prefix>
+#   panl.suffix.<code>=<suffix>
+#
+# where:
+#       <code> is the LPSE code and __MUST__ be the same length as the
+#              panl.lpse.num
+#     <prefix> is the text that will be prefixed before the selected facet in
+#              the URI
+#     <suffix> is the text that will be suffixed after the selected facet in
+#              the URI
+#
+# As an example, should you have a manufacturer facet (LPSE code 'm') value of
+# 'ACME Incorporated' with the following properties set:
+#
+#   panl.prefix.m=Manufactured by
+#   panl.suffix.m= // a fine company
+#
+# The non-suffixed, non-prefixed URI encoding would be:
+#   /ACME Incorporated/m/
+#
+# Post processing, the URI would be the following:
+#   /Manufactured by ACME Incorporated // a fine company/m/
 #
 #                                ~ ~ ~ * ~ ~ ~
 #
@@ -147,7 +183,7 @@ $panl.lpse.order
 # the fields that are stored by the solr engine.
 #
 # As an example, another property:
-#   panl.results.fields.first
+#   panl.results.fields.firstfive
 #
 # was also automatically generated with only the first five fields.  You may
 # rename, delete or add any of the results fields as you wish (remembering that
