--- a/src/main/resources/panl.template.properties
+++ b/src/main/resources/panl.template.properties
@@ -65,13 +65,15 @@ solr.indexer.server.url=http://localhost:8983/solr
 # test the collections, and the URLs that are generated, including field
 # inclusion, faceting, querying, and results.
 #
-# If this property does not exist, then no results viewer will be available.
-# You may wish to remove this property for production (or perhaps just disallow
-# access to it.)
+# If this property does not exist, or if it is set to false, then no results
+# viewer will be available.  You may wish to remove this property for production
+# (or perhaps just disallow access to it.)
+#
+# The URL is __ALWAYS__ /panl-results-viewer/
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.results.viewer.url=/panl-results-viewer/*
+panl.results.viewer.url=true
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
