--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
     implementation 'org.apache.solr:solr-solrj:9.6.0'
     implementation 'org.apache.solr:solr-solrj-zookeeper:9.6.0'
+    implementation 'commons-io:commons-io:2.16.1'
 
     implementation 'org.json:json:20240303'
 
