Added in panl.include.same.number.facets property and logic for ignoring adding facet to results if the number of document results is the same as the number that the facet would reduce the results to.

--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -39,10 +39,28 @@ $panl.param.numrows
 #                     ------- -- ------- ------ ------
 # Facets that only include a single result to further refine the query will not
 # be included by default.  The reasoning behind this is that having only one
-# defined facet does not refine the query at all, it simply returns the same
-# set of results, just with a longer LPSE URI
+# defined facet does not refine the query at all, it will simply return the
+# same set of results, just with a longer LPSE URI
+#
+# The default value for this property is false, so you do not need to include
+# it unless you wish to enable this feature, i.e.
+#   panl.include.single.facets=true
 
 panl.include.single.facets=false
+
+#                    Whether to include same number facets
+#                    ------- -- ------- ---- ------ ------
+# Facets that include the same number of results as the number of found
+# documents will not be included by default.  The reasoning behind this is that
+# if by using this facet, you will get exactly the same results, then this is
+# not a refinement of the query at all, it will simply return the same set of
+# results, just with a longer LPSE URI.
+#
+# The default value for this property is false, so you do not need to include
+# it unless you wish to enable this feature, i.e.
+#   panl.include.same.number.facets=true
+
+panl.include.same.number.facets=false
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
